src/test/java/AndroidFindElements.java
import io.appium.java_client.AppiumBy;
import io.appium.java_client.AppiumDriver;
import org.openqa.selenium.By;
import org.openqa.selenium.WebElement;

public class AndroidFindElements {

//    public static void main(String[] args) throws Exception {
//        AppiumDriver driver = CreateDriverSession.initializeDriver("Android");
//
//        WebElement myElement = (WebElement) driver.findElement(AppiumBy.accessibilityId("Accessibility"));
//        System.out.println(myElement.getText());
//
//        myElement = (WebElement) driver.findElement(AppiumBy.id("android:id/text1"));
//        System.out.println(myElement.getText());
//
//        myElement = (WebElement) driver.findElement(AppiumBy.className("android.widget.TextView"));
//        System.out.println(myElement.getText());
//
//        myElement = (WebElement) driver.findElement(AppiumBy.xpath("//android.widget.TextView[@content-desc=\"Accessibility\"]"));
//        System.out.println(myElement.getText());
//
//        myElement = (WebElement) driver.findElement(AppiumBy.xpath("//*[@text=\"Accessibility\"]"));
//        System.out.println(myElement.getText());
//
//        // error: Exception in thread "main" org.openqa.selenium.InvalidSelectorException: Locator Strategy 'name' is not supported for this session
////        myElement = (WebElement) driver.findElement(AppiumBy.name("Accessibility"));
////        System.out.println(myElement.getText());

    //}


}
